updated tab-complete for NametagCmd